Remove fonts preload

--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -17,23 +17,7 @@
 <link rel="preconnect" href="https://www.googletagmanager.com">
 <link rel="preconnect" href="https://www.google.com">
 
-<link rel="preload" href="fonts/indie-flower-v12-latin-regular.woff2" as="font" type="font/woff2"
-    crossorigin>
-<link rel="preload" href="fonts/indie-flower-v12-latin-regular.woff" as="font" type="font/woff"
-    crossorigin>
-
-<link rel="preload" href="fonts/libre-baskerville-v9-latin-regular.woff2" as="font" type="font/woff2"
-    crossorigin>
-<link rel="preload" href="fonts/libre-baskerville-v9-latin-regular.woff" as="font" type="font/woff"
-    crossorigin>
-
-<link rel="preload" href="fonts/montserrat-v15-latin-300.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="fonts/montserrat-v15-latin-300.woff" as="font" type="font/woff" crossorigin>
-
-<link rel="preload" href="fonts/montserrat-v15-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="fonts/montserrat-v15-latin-regular.woff" as="font" type="font/woff" crossorigin>
-
-<link rel="modulepreload" href="https://www.google-analytics.com/analytics.js" crossorigin/>
+<link rel="modulepreload" href="https://www.google-analytics.com/analytics.js"/>
 <link rel="modulepreload"
     href="https://platform.twitter.com/js/moment~timeline.bcb1cafa923482f4826e32741fe16a98.js" />
 <link rel="modulepreload" href="https://platform.twitter.com/js/timeline.28ecda9667eeb8e1b18898b99fee6c31.js" />
