Fix images path

--- a/app/partials/head.html
+++ b/app/partials/head.html
@@ -1,15 +1,15 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<title>Home | Mannar Hielal </title>
+<title> Mannar Hielal </title>
 <meta name="description"
     content="Hi! i write, share and like topics about: Web Developmnet, Inline Skating, Psychology and Languages">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="apple-touch-icon" href="../img/icon.png">
+<link rel="apple-touch-icon" href="images/icon.png">
 <!-- Place favicon.ico in the root directory -->
 
-<link rel="apple-touch-icon" sizes="180x180" href="../img/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../img/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <link rel="preconnect" href="https://www.google-analytics.com">
