Add excplicit width and height to img tag

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,20 +28,20 @@
             </header>
 
             <a class="home__grid--blog bg--lavendergray flex--centered-col text--onyx" href="blog.html">
-                <img class="grid__icon blog__icon" src="../img/icons/blog-icon.svg" alt="blog-icon">
+                <img class="grid__icon blog__icon" src="../img/icons/blog-icon.svg" alt="blog-icon" width="27" height="27">
 
                 <h2 class="grid__title h4">Blog</h2>
             </a>
 
             <a class="home__grid--toplikes bg--light-onyx flex--centered-col text--default-color" href="toplikes.html">
-                <img class="grid__icon toplikes__icon" src="../img/icons/toplikes-icon.svg" alt="toplikes-icon">
+                <img class="grid__icon toplikes__icon" src="../img/icons/toplikes-icon.svg" alt="toplikes-icon" width="27" height="27">
 
                 <h2 class="grid__title h4">Top Likes</h2>
             </a>
 
             <a class="home__grid--portfolio bg--dark-rasberry flex--centered-col text--default-color"
                 href="portfolio.html">
-                <img class="grid__icon portfolio__icon" src="../img/icons/portfolio-icon.svg" alt="portfolio-icon">
+                <img class="grid__icon portfolio__icon" src="../img/icons/portfolio-icon.svg" alt="portfolio-icon" width="27" height="27">
 
                 <h2 class="grid__title h4">Portfolio</h2>
             </a>
