--- a/app/views/blog.html
+++ b/app/views/blog.html
@@ -29,7 +29,7 @@
                         <li class="tag-list__link h6">Web_Development</li>
                     </ul>
 
-                    <p class="article-card__body arrow--right">so finally after 8 weeks i finished developing voCHabular
+                    <p class="article-card__body ">so finally after 8 weeks i finished developing voCHabular
                         new Blog, my heartily congrats to voCHabular having their new Blog published!
                     </p>
 
