--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -7,32 +7,30 @@
 <body class="portfolio bg--default-color ">
     <div class="filters-button-group button-group">
         <a href="#" class="button is-checked text--onyx h6" data-filter="*">All</a>
-        <a href="#" class="button  text--onyx h6" data-filter=".hashtag--css-html">#CSS/HTML</a>
-        <a href="#" class="button  text--onyx h6" data-filter=".hashtag--graphic-design">#Graphic_design</a>
-        <a href="#" class="button  text--onyx h6" data-filter=".hashtag--sketchapp">#Sketchapp</a>
+        <a href="#" class="button  text--onyx h6" data-filter=".hashtag--web-themes">#Web themes</a>
         <a href="#" class="button  text--onyx h6" data-filter=".hashtag--drupal">#Drupal</a>
-        <a href="#" class="button  text--onyx h6" data-filter=".hashtag--jquery">#jQuery</a>
+        <a href="#" class="button  text--onyx h6" data-filter=".hashtag--graphic-design">#Graphic_design</a>
     </div>
 
     <div class="portfolio__grid">
         <main class="grid__main">
-            <!-- article hero -->
-            <article class="article-card article-card--hero effect--scale hashtag--css-html hashtag--jquery">
+            <!-- article hero: to replace -->
+            <article class="article-card article-card--hero effect--scale hashtag--web-themes">
                 <figure class="article-card__fig">
                     <img class="article-card__img filter--gray" src="../img/contents/projects/antarctica.jpg"
                         alt="antarctica-project-image" loading="lazy" width="470" height="255">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
-                    <h2 class="article-card__title title">A fictitous Travel Agency called Antarctica</h2>
+                    <h2 class="article-card__title title">I'm Salma web theme- Bootstrap 5</h2>
 
                     <ul class="article-card__tag-list list--no-bullet">
                         <li class="tag-list__link h6">CSS/HTML</li>
-                        <li class="tag-list__link h6">jQuery</li>
+                        <li class="tag-list__link h6">Bootstrap</li>
                     </ul>
 
-                    <p class="article-card__body arrow--right">Through this project i learnt tons of new things in
-                        #WebDevelopment and i trained the things i've already known.
+                    <p class="article-card__body ">A landing page web theme done with Bootstrap 5 with a
+                        working contact form.
                     </p>
 
                     <a class="article-card__btn h7" href="projects/antarctica/index.html" target="_blank"></a>
@@ -40,8 +38,31 @@
             </article>
 
             <div class="article-grid flex--centered-row">
-                <!-- article 2 -->
-                <article class="article-card effect--scale hashtag--css-html hashtag--sketchapp hashtag--drupal">
+                <!-- article 2 : antarctica-->
+                <article class="article-card effect--scale hashtag--web-themes">
+                    <figure class="article-card__fig">
+                        <img class="article-card__img filter--gray" src="../img/contents/projects/antarctica.jpg"
+                            alt="antarctica-project-image" loading="lazy" width="470" height="255">
+                    </figure>
+
+                    <div class="article-card__content flex--centered-col">
+                        <h2 class="article-card__title title">A fictitous Travel Agency called Antarctica</h2>
+
+                        <ul class="article-card__tag-list list--no-bullet">
+                            <li class="tag-list__link h6">CSS/HTML</li>
+                            <li class="tag-list__link h6">jQuery</li>
+                        </ul>
+
+                        <p class="article-card__body ">Through this project i learnt tons of new things in
+                            #WebDevelopment and i trained the things i've already known.
+                        </p>
+
+                        <a class="article-card__btn h7" href="projects/antarctica/index.html" target="_blank"></a>
+                    </div>
+                </article>
+
+                <!-- article 3 -->
+                <article class="article-card effect--scale hashtag--drupal">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/vochabular.jpg"
                             alt="vochabular-project-image" loading="lazy" width="470" height="255">
@@ -58,7 +79,7 @@
                             <li class="tag-list__link h6">Drupal</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right">this CMS was designed using Sketch app, implemented
+                        <p class="article-card__body ">this CMS was designed using Sketch app, implemented
                             with Drupal 8, custom theming and lots of drush cr :)
                         </p>
 
@@ -67,8 +88,9 @@
                             target="_blank"></a>
                     </div>
                 </article>
-                <!-- article 3 -->
-                <article class="article-card effect--scale hashtag--css-html">
+
+                <!-- article 4 -->
+                <article class="article-card effect--scale hashtag--web-themes">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/forty.jpg"
                             alt="forty-project-image" loading="lazy" width="470" height="255">
@@ -81,14 +103,15 @@
                             <li class="tag-list__link h6">CSS/HTML</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right">Flex, float and DOM traversing, is what i learnt
+                        <p class="article-card__body ">Flex, float and DOM traversing, is what i learnt
                             through this light weight project.
                         </p>
 
                         <a class="article-card__btn h7" href="projects/forty3/forty3.html" target="_blank"></a>
                     </div>
                 </article>
-                <!-- article 4 -->
+
+                <!-- article 5 -->
                 <article class="article-card effect--scale hashtag--graphic-design hashtag--infographic">
                     <figure class="article-card__fig">
                         <img class="article-card__img filter--gray" src="../img/contents/projects/infographic.jpg"
@@ -104,7 +127,7 @@
                             <li class="tag-list__link h6">Infographic</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right">A collection of vector design representing
+                        <p class="article-card__body ">A collection of vector design representing
                             educational materials in Infogrpahic style.
                         </p>
 
