--- a/app/views/toplikes.html
+++ b/app/views/toplikes.html
@@ -31,7 +31,7 @@
                             <li class="tag-list__link h6">Web_Development</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right"> This channel cover Tutorials of Django, Ruby on
+                        <p class="article-card__body "> This channel cover Tutorials of Django, Ruby on
                             Rails, AngularJs, NodeJS even Game Unity and much more
                         </p>
 
@@ -55,7 +55,7 @@
                             <li class="tag-list__link h6">CSS</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right">Write better, clearer CSS that you or anyone could
+                        <p class="article-card__body ">Write better, clearer CSS that you or anyone could
                             easily further maintain.
                         </p>
 
@@ -79,7 +79,7 @@
                             <li class="tag-list__link h6">Inline_Skating</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right"> New to inline skating? do you want to improve your
+                        <p class="article-card__body "> New to inline skating? do you want to improve your
                             technique? Shon has got cool tips for you.
                         </p>
 
@@ -103,7 +103,7 @@
                             <li class="tag-list__link h6">Languages</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right"> If your goal is to improve your German hearing
+                        <p class="article-card__body "> If your goal is to improve your German hearing
                             skills, search no more! check Slow German channel for new podcasts.
                         </p>
 
@@ -126,7 +126,7 @@
                             <li class="tag-list__link h6">Fitness</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right"> I favor this channel because the exercises
+                        <p class="article-card__body "> I favor this channel because the exercises
                             demonstrated require no gym equipment,yet very challenging, i guarantee butt-muscles burn :D
                         </p>
 
@@ -149,7 +149,7 @@
                             <li class="tag-list__link h6">Web_Development</li>
                         </ul>
 
-                        <p class="article-card__body arrow--right"> as the owner described it: Black-belt your
+                        <p class="article-card__body "> as the owner described it: Black-belt your
                             development skills. Tutorials on Node.js, JavaScript, CSS, HTML, Vue.js, React and much
                             more..
                         </p>
@@ -174,7 +174,7 @@
                             <li class="tag-list__link h6">Web_Development</li>
                         </ul>
                         <!-- 5 lines length is prefered -->
-                        <p class="article-card__body arrow--right"> the simpliest guide for beginners in web developing
+                        <p class="article-card__body "> the simpliest guide for beginners in web developing
                             to create different web elements likes menus and buttons and apply interactivity.
                         </p>
 
