--- a/app/views/index.html
+++ b/app/views/index.html
@@ -22,26 +22,31 @@
                     <a class="text--default-color" href="../views/index.html">Mannar Hielal</a>
                 </h1>
 
-                <h4 class="header__slogan text--center text--lavendergray">I started my babysteps at 33, again.</h4>
+                <h4 class="header__slogan text--center text--lavendergray">Web developer</h4>
+                <h4 class="header__slogan text--center text--lavendergray">Inline Skater</h4>
+                <h4 class="header__slogan text--center text--lavendergray">Life learner</h4>
 
-                <a class="h4 header__btn btn--s" href="about.html">Read My Story</a>
+                <a class="header__btn btn--s" href="about.html"> About me</a>
             </header>
 
             <a class="home__grid--blog bg--lavendergray flex--centered-col text--onyx" href="blog.html">
-                <img class="grid__icon blog__icon" src="../img/icons/blog-icon.svg" alt="blog-icon" width="27" height="27">
+                <img class="grid__icon blog__icon" src="../img/icons/blog-icon.svg" alt="blog-icon" width="27"
+                    height="27">
 
                 <h2 class="grid__title h4">Blog</h2>
             </a>
 
             <a class="home__grid--toplikes bg--light-onyx flex--centered-col text--default-color" href="toplikes.html">
-                <img class="grid__icon toplikes__icon" src="../img/icons/toplikes-icon.svg" alt="toplikes-icon" width="27" height="27">
+                <img class="grid__icon toplikes__icon" src="../img/icons/toplikes-icon.svg" alt="toplikes-icon"
+                    width="27" height="27">
 
                 <h2 class="grid__title h4">Top Likes</h2>
             </a>
 
             <a class="home__grid--portfolio bg--dark-rasberry flex--centered-col text--default-color"
                 href="portfolio.html">
-                <img class="grid__icon portfolio__icon" src="../img/icons/portfolio-icon.svg" alt="portfolio-icon" width="27" height="27">
+                <img class="grid__icon portfolio__icon" src="../img/icons/portfolio-icon.svg" alt="portfolio-icon"
+                    width="27" height="27">
 
                 <h2 class="grid__title h4">Portfolio</h2>
             </a>
