Update about me

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -10,8 +10,8 @@
             <img class="sidebar__img img--small" src="../img/avatar-mobile-shadow.png" alt="about-photo-small"
                 loading="lazy" width="81" height="81">
 
-            <img class="sidebar__img img--large" src="../img/about-foto-cut.jpeg" alt="about-photo-large"
-                loading="lazy" width="272" height="317">
+            <img class="sidebar__img img--large" src="../img/about-foto-cut.jpeg" alt="about-photo-large" loading="lazy"
+                width="272" height="317">
 
             <ul class="sidebar__contact list--no-bullet">
                 <li class="contact__item contact--email">
@@ -51,8 +51,9 @@
                 <p class="greeting__body">The ladies in my community in Syria say that after 30 a womans goal is to
                     start a family, dedicate herself to a husband, household and bring children,
                     So i did the same (with redefining some variables) i started learning a new language (German),
-                    dedicated myself to learn coding and generated few projects :)
+                    dedicated myself to learn coding, enrolled in a computer science school.
                 </p>
+                <p> <strong>My vision in life: you never graduate from the life school.</strong></p>
             </section>
 
             <section class="see-more">
@@ -92,22 +93,37 @@
             <section class="quick-glance">
                 <h2 class="quick-glance__title title">A Quick Glance</h2>
 
-                <div class="quick-glance--2014  flex--centered-row">
-                    <h2 class="2014__title title">2014</h2>
+                <div class="quick-glance--2020  flex--centered-row">
+                    <p class="2020__body"><strong>Officially a web developer</strong> at <a class="h4 dotted"
+                            href="http://liip.ch/" target="_blank">Liip AG!!</a> </br>Thrilled to announced that the
+                        team
+                        has
+                        hired me to work as a
+                        web developer, it worthed it!</p>
 
-                    <img class="quick-glance__img" src="../img/syr.svg" alt="syrian-seperator" loading="lazy">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
 
-                    <p class="2014__body">Back In Aleppo, i worked as a web content manager, in my spare i engaged my
-                        self in graphic design and studying English. untill all the bad things broke out there :(</p>
+                    <h2 class="2020__title title">2020</h2>
                 </div>
 
-                <div class="quick-glance--2015  flex--centered-row">
-                    <p class="2015__body">In Turkey i worked a graphic design freelance, It was the phase where i had to
-                        save for the journey to Europe.</p>
+                <div class="quick-glance--2018  flex--centered-row">
+                    <h2 class="2018__title title">2018</h2>
 
-                    <img class="quick-glance__img" src="../img/turk.svg" alt="turkish-seperator" loading="lazy">
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
 
-                    <h2 class="2015__title title">2015</h2>
+                    <p class="2018__body">8 month so far at <a class="h4 dotted" href="https://www.liip.ch/en"
+                            target="_blank">Liip AG</a> and counting. I also started the B2 German course, P.S: i just
+                        started to learn how to bike :p</p>
+                </div>
+
+                <div class="quick-glance--2017  flex--centered-row">
+                    <p class="2017__body">I completed a coding bootcamp <a class="h4 dotted"
+                            href="http://powercoders.org/" target="_blank">Powercoders</a> then started an internship as
+                        Web Developer trainee by the end of the year i completed B1 German course.</p>
+
+                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
+
+                    <h2 class="2017__title title">2017</h2>
                 </div>
 
                 <div class="quick-glance--2016  flex--centered-row">
@@ -121,24 +137,22 @@
                         Inline Skating. at the end of the year i started visiting A2 German course.</p>
                 </div>
 
-                <div class="quick-glance--2017  flex--centered-row">
-                    <p class="2017__body">I completed a coding bootcamp <a class="h4 dotted"
-                            href="http://powercoders.org/" target="_blank">Powercoders</a> then started an internship as
-                        Web Developer trainee by the end of the year i completed B1 German course.</p>
+                <div class="quick-glance--2015  flex--centered-row">
+                    <p class="2015__body">In Turkey i worked a graphic design freelance, It was the phase where i had to
+                        save for the journey to Europe.</p>
 
-                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
+                    <img class="quick-glance__img" src="../img/turk.svg" alt="turkish-seperator" loading="lazy">
 
-                    <h2 class="2017__title title">2017</h2>
+                    <h2 class="2015__title title">2015</h2>
                 </div>
 
-                <div class="quick-glance--2018  flex--centered-row">
-                    <h2 class="2018__title title">2018</h2>
+                <div class="quick-glance--2014  flex--centered-row">
+                    <h2 class="2014__title title">2014</h2>
 
-                    <img class="quick-glance__img" src="../img/ch.svg" alt="switzerland-seperator" loading="lazy">
+                    <img class="quick-glance__img" src="../img/syr.svg" alt="syrian-seperator" loading="lazy">
 
-                    <p class="2018__body">8 month so far at <a class="h4 dotted" href="https://www.liip.ch/en"
-                            target="_blank">Liip AG</a> and counting. I also started the B2 German course, P.S: i just
-                        started to learn how to bike :p</p>
+                    <p class="2014__body">Back In Aleppo, i worked as a web content manager, in my spare i engaged my
+                        self in graphic design and studying English. untill all the bad things broke out there :(</p>
                 </div>
 
             </section>
@@ -148,7 +162,7 @@
                 <h2 class="edu__title title">Education</h2>
 
                 <ul class="edu__list">
-                    <li class="list__item">Current Status: Vocational Building as computer scientist <a class="dotted"
+                    <li class="list__item">Vocational Building as computer scientist <a class="dotted"
                             href="https://www.ict-berufsbildung.ch/berufsbildung/informatikerin-efz-applikationsentwicklung/"
                             target="_blank">Informatiker/in EFZ Applikationsentwicklung</a> - Bern (August 2018 - Juli
                         2020)</li>
@@ -167,7 +181,7 @@
 
                 <ul class="lang__list">
                     <li class="list__item">
-                        <span>German (B1) </span>
+                        <span>German (B2): telc </span>
                         <br>
                         <img src="../img/de-bar.svg" alt="detusch-bar" loading="lazy">
                     </li>
@@ -191,6 +205,12 @@
                 <h2 class="media__title title">In The Media</h2>
 
                 <ul class="media__list">
+                    <li class="list__item">EP #195: Bettina Hirsig & Mannar Hielal: The Powercoder Who Escaped The
+                        Syrian War
+                        <a class="dotted" href="https://www.swisspreneur.org/podcast/bettina-hirsig-mannar-hielal-ep195"
+                            target="_blank">Swisspreneur (2021)</a>
+                    </li>
+
                     <li class="list__item">Mannar : from Aleppo to Bern
                         <a class="dotted" href="https://www.liip.ch/en/blog/mannar-from-aleppo-to-bern"
                             target="_blank">LIIP Blog (2018)</a>
