Update portfolio markup

--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -18,7 +18,7 @@
             <article class="article-card article-card--hero effect--scale hashtag--web-themes">
                 <figure class="article-card__fig">
                     <img class="article-card__img filter--gray" src="../img/contents/coming-soon.jpg"
-                        alt="antarctica-project-image" loading="lazy" width="470" height="255">
+                        alt="coming soon image" loading="lazy" width="470" height="255">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
@@ -33,7 +33,7 @@
                         working contact form.
                     </p>
 
-                    <a class="article-card__btn h7" href="projects/antarctica/index.html" target="_blank"></a>
+                    <a class="article-card__btn h7" href="#" target="_blank"></a>
                 </div>
             </article>
 
