--- a/app/sass/_home.scss
+++ b/app/sass/_home.scss
@@ -64,6 +64,13 @@
         justify-content: center;
         align-items: center;
         flex-wrap: wrap;
+        padding-left: 0;
+
+        li {
+            &:hover .iconbox{
+                transform: scale(1.1);
+            }
+        }
     }
 }
 
@@ -187,14 +194,15 @@ a.home__grid--toplikes,
 .iconbox {
     display: inline-block;
     flex-grow: 1;
-    height: 5rem;
+    height: 3rem;
+    width: 3rem;
     margin: 0.5rem;
     padding: 1rem;
-    width: 5rem;
-    background-color: #fff;
-    border-radius: 0.425rem;
+    background-color: $lavendergray;
+    border-radius: 0.15rem;
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.3);
     position: relative;
+    transition: transform .2s;
 
     svg {
         left: 50%;
@@ -282,8 +290,8 @@ a.home__grid--toplikes,
         margin: 0 33px 33px 33px; // padding:0 27px 27px 27px;
 
         ul {
-            justify-content: start;
-            margin-top: 2rem;
+            justify-content: center;
+            margin-top: 0.5rem;
         }
     }
     .avatar__img {
