--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -17,12 +17,12 @@
             <!-- article hero: to replace -->
             <article class="article-card article-card--hero effect--scale hashtag--web-themes">
                 <figure class="article-card__fig">
-                    <img class="article-card__img filter--gray" src="../img/contents/coming-soon.jpg"
+                    <img class="article-card__img filter--gray" src="../img/contents/projects/epurse.jpg"
                         alt="coming soon image" loading="lazy" width="470" height="255">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
-                    <h2 class="article-card__title title">I'm Salma web theme- Bootstrap 5</h2>
+                    <h2 class="article-card__title title">ePurse- Bootstrap 5 template</h2>
 
                     <ul class="article-card__tag-list list--no-bullet">
                         <li class="tag-list__link h6">CSS/HTML</li>
