Add educa screenshot & desc

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -64,18 +64,18 @@
 
                         <div class="article-card__content flex--centered-col">
                             <figure class="article-card__fig">
-                                <img class="article-card__img filter--gray" src="../img/contents/projects/epurse.jpg"
-                                    alt="coming soon image" loading="lazy">
+                                <img class="article-card__img filter--gray"
+                                    src="../img/contents/projects/educa-hero.jpg" alt="educa website" loading="lazy">
                             </figure>
 
                             <h3 class="article-card__title title">
-                                <a href="#">ePurse - Bootstrap 5 theme</a>
+                                <a href="#">eDuca - Course Landing page </a>
                             </h3>
 
-                            <p class="article-card__body ">A landing page web theme made with
-                                <a href="https://getbootstrap.com/">Bootstrap 5</a>
-                                with a
-                                working contact form.
+                            <p class="article-card__body "> eDuca is onepage Landing Page Template for educational
+                                needs, based on
+                                <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
+                                with top performance features, like top lighthouse rank & 100% markup validations.
                             </p>
 
                             <a class="article-card__btn h7" href="#" target="_blank"></a>
