--- a/app/views/portfolio.html
+++ b/app/views/portfolio.html
@@ -17,20 +17,22 @@
             <!-- article hero: to replace -->
             <article class="article-card article-card--hero effect--scale hashtag--web-themes">
                 <figure class="article-card__fig">
-                    <img class="article-card__img filter--gray" src="../img/contents/projects/epurse.jpg"
-                        alt="coming soon image" loading="lazy" width="470" height="255">
+                    <img class="article-card__img filter--gray" src="../img/contents/projects/educa-hero.jpg"
+                        alt="educa website" loading="lazy" width="470" height="255">
                 </figure>
 
                 <div class="article-card__content flex--centered-col">
-                    <h2 class="article-card__title title">ePurse- Bootstrap 5 template</h2>
+                    <h2 class="article-card__title title">eDuca - Course Landing page </h2>
 
                     <ul class="article-card__tag-list list--no-bullet">
                         <li class="tag-list__link h6">CSS/HTML</li>
                         <li class="tag-list__link h6">Bootstrap</li>
                     </ul>
 
-                    <p class="article-card__body ">A landing page web theme done with Bootstrap 5 with a
-                        working contact form.
+                    <p class="article-card__body "> eDuca is onepage Landing Page Template for educational
+                        needs, based on
+                        <a href="https://getbootstrap.com/">Bootstrap 5 framework</a>
+                        with top performance features, like top lighthouse rank & 100% markup validations.
                     </p>
 
                     <a class="article-card__btn h7" href="#" target="_blank"></a>
